# static_ecs

./: Cargo.toml  LICENSE  README.md
derive_world/: Cargo.toml
derive_world/src/: lib.rs
impl_type_ref/: Cargo.toml
impl_type_ref/src/: lib.rs
member_of_type/: Cargo.toml
member_of_type/src/: lib.rs
src/: component.rs  lib.rs  typeset.rs
static_ecs/: Cargo.toml
static_ecs/src/: component.rs  lib.rs
