[package]
name = "derive_world"
version = "0.1.0"
authors = ["Masahiro Yoshida <mypianoplayer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
itertools = "0.10.1"
#len-trait = "0.6.1"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }